# NetworkDemo

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: arch.cmake  find_jemalloc.cmake
contrib/: CMakeLists.txt
contrib/jemalloc-cmake/: CMakeLists.txt
contrib/numactl-cmake/: CMakeLists.txt  config.h
src/: CMakeLists.txt  Client.cpp  Client.h  Common.h  RPCConfig.h  Server.cpp  Server.h
src/Example-ThriftRPC/: CMakeLists.txt  TestRPC.h
src/Example-bRPC/: CMakeLists.txt  TestRPC.h  echo.proto
src/ThriftRPC/: CMakeLists.txt  IRPC.h  TestRPC.h  proto.thrift
src/ThriftRPC/gen-cpp/: TestProto.cpp  TestProto.h  proto_types.h
src/bRPC/: CMakeLists.txt
src/bRPC/gen-cpp/: echo.pb.cc  echo.pb.h
tests/: CMakeLists.txt  GenRandArray.cpp  PSortTest.cpp  googletest
utils/: CMakeLists.txt  Common.h  Gang.h  Hash.h  Log.h  MapFile.h  Monitor.h  Numa.h  PODArray.cpp  PODArray.h  SIMD.h  Sort.h  Split.h  StopWatch.h  SysCmd.h  Type.h
